--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <h2>Simple Risk Calculator</h2>
     <input type="number" id="pips" placeholder="Enter pips" />
     <input type="number" id="risk" placeholder="Enter risk in $" />
+    style="margin-bottom: 10px;">
+<br>
     <button onclick="calculateLotSize()">Calculate</button>
     <div class="result" id="result"></div>
   </div>
