--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Simple Risk Calculator MHMD_8 TTF</title>
+  <title>Simple Risk Calculator</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="container">
-    <h2>Simple Risk Calculator</h2>
+    <h2>Simple Risk Calculator MHMD_8 TTF</h2>
     <input type="number" id="pips" placeholder="Enter pips" />
     <input type="number" id="risk" placeholder="Enter risk in $"  style="margin-bottom: 10px;">
 <br>
