--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container">
-    <h2>TTFClub Risk Calculator</h2>
+    <h2>TTF_Club Risk Calculator</h2>
     <input type="number" id="pips" placeholder="Enter pips" />
     <input type="number" id="risk" placeholder="Enter risk in $"  style="margin-bottom: 10px;">
 <br>
